# mlflow_test

./: .dockerignore  Dockerfile  README.md  convert_to_onnx.py  convert_to_tensorrt.py  docker-compose.yml  image_classification.py  image_classification_fullmode_save.py  onnx_batch_inference.py  onnx_inference.py  pth_batch_inference.py  pth_inference.py  pth_inference_fullmodel.py  pyproject.toml
app/: main.py
app/routers/: health.py  mlflow.py  router_svc.py
app/schemas/: dto_define.py  health.py  mlflow.py
app/services/: health_service.py  inference_service.py  mlflow_service.py
